--- a/notes-app-client/package.json
+++ b/notes-app-client/package.json
@@ -15,6 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "aws s3 sync build/ s3://notes-app-deploy-bucket --delete",
+    "postdeploy": "aws cloudfront create-invalidation --distribution-id E33YAHPPO766W5 --paths /*",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
